# BLIFMaker

./: .gitignore  CMakeLists.txt  graph.dot
include/: Channel.h  Node.h
src/: CMakeLists.txt  Node.cpp  main.cpp
